# FizixLabWebGPU

./: ARCHITECTURE.md  CMakeLists.txt  CODEBASE_OVERVIEW.md  CONTRIBUTING.md  DOCS.md  QUICK_REFERENCE.md  README.md  emscripten_activation.sh  imgui.ini  main.cpp
.claude/: launch.json
.github/workflows/: deploy-web.yml
docs/: PHYSICS_OPTIMIZATION.md
glfw/src/: CMakeLists.txt
imgui/: CMakeLists.txt
src/app/: index.html  main.cpp
src/collision/: AABB.hpp  CollisionPipeline.cpp  CollisionPipeline.hpp  CollisionSolver.cpp  Collisions.cpp  Collisions.hpp  ContactManifold.hpp
src/common/: settings.hpp
src/core/: CollisionPipeline.cpp  CollisionSolver.cpp  CollisionSolver.hpp  Engine.cpp  Engine.hpp  KeybindUI.hpp  MeasureTool.cpp  MeasureTool.hpp  Recorder.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Snapshot.hpp  TextRenderer.cpp  TextRenderer.hpp  UIManager.cpp  UIManager.hpp  Utility.cpp  Utility.hpp  World.cpp  World.hpp
src/core/common/: settings.hpp
src/fonts/: info.txt
src/math/: Mat4.hpp  Math.hpp  Transform.hpp  Vec2.hpp  Vec2.hpp.bak  Vec2f.hpp  Vec2i.hpp
src/physics/: AABB.hpp  Ball.cpp  Ball.hpp  Body.cpp  Body.hpp  Box.cpp  Box.hpp  Collisions.cpp  Collisions.hpp  Manifold.hpp  PhysicsConstants.hpp  Rigidbody.cpp  Rigidbody.hpp  ShapeType.hpp
src/shaders/: text.wgsl  triangle.wgsl
src/shape/: Ball.cpp  Ball.hpp  Box.cpp  Box.hpp  Cannon.cpp  Cannon.hpp  Canon.cpp  Canon.hpp  Incline.cpp  Incline.hpp  Rope.cpp  Rope.hpp  Shape.cpp  Shape.hpp  Spring.cpp  Spring.hpp  Thruster.cpp  Thruster.hpp  Trigger.cpp  Trigger.hpp
src/web/: index.html  ui.css  ui.js
web/: robots.txt  shell.html  sitemap.xml
webBuild/: CMakeCache.txt  Makefile  cmake_install.cmake
webBuild/glfw3webgpu/: Makefile  cmake_install.cmake
webBuild/webgpu/: Makefile  cmake_install.cmake
webgpu/: webgpu.cmake
